--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,9 @@
     <div class="col-xs-12">        
         <app-recipe-item 
             *ngFor="let recipeElement of recipes" 
-            [recipe]=recipeElement>
+            [recipe]=recipeElement
+            (selectedRecipe)=onSelectedRecipe(recipeElement)
+            >
         </app-recipe-item>
     </div>
 </div>
