--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <app-recipes *ngIf="selectedHeading=='recipes'"></app-recipes>
-            <app-shopping-list *ngIf="selectedHeading=='shoppinglist'"></app-shopping-list>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
