--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList($event)" style="cursor: pointer;">To Shopping List</a></li>
         <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
-        <li><a style="cursor: pointer;">Delete Recipe</a></li>
+        <li><a (click)="onDeleteRecipe()" style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
