--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -7,7 +7,7 @@
             type="submit" 
             class="btn btn-success"
             [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>        
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>        
         </div>
       </div>  
       <div class="row">
@@ -18,7 +18,8 @@
               type="text"
               id="name"
               formControlName="name"
-              class="form-control">
+              class="form-control"
+              >
           </div>
         </div>
       </div>
@@ -30,13 +31,14 @@
                 type="text"
                 id="imagePath"
                 formControlName="imagePath"                
-                class="form-control">
+                class="form-control"
+                #imagePath>
             </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>      
       <div class="row">
@@ -72,7 +74,10 @@
                   formControlName="amount">                  
             </div>   
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button 
+                type="button" 
+                class="btn btn-danger"
+                (click)="onDeleteIngredient(i)">X</button>
             </div>  
         </div>  
         <hr>                   
